--- a/Application/Phone/View/Index/index.html
+++ b/Application/Phone/View/Index/index.html
@@ -4,170 +4,122 @@
 </block>
 
 <block name="script">
-    <script>
-        $('.searchbar').click(function(){
-            window.location.href = "{:UC('Index/search')}";
-        });
-    </script>
 </block>
 
 <block name="content">
-    <div class="content native-scroll">
-        <div class="bar">
-            <div class="searchbar">
-                <a class="searchbar-cancel">取消</a>
-                <div class="search-input">
-                    <label class="icon icon-search" for="search"></label>
-                    <input type="search" id="search" placeholder="输入关键字...">
+    <div class="page page-current" id="IndexIndex">
+        {$tplBar}
+        <div class="content native-scroll">
+            <div class="bar">
+                <div class="searchbar">
+                    <a class="searchbar-cancel">取消</a>
+                    <div class="search-input">
+                        <label class="icon icon-search" for="search"></label>
+                        <input type="search" id="search" placeholder="输入关键字...">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="swiper-container adbox" data-space-between='10'>
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="__PUBLIC__/images/banner.jpg" alt="" style='width: 100%'></div>
-                <div class="swiper-slide"><img src="__PUBLIC__/images/banner.jpg" alt="" style='width: 100%'></div>
-                <div class="swiper-slide"><img src="__PUBLIC__/images/banner.jpg" alt="" style='width: 100%'></div>
-            </div>
-        </div>
-        <div class="buttons-tab fixed-tab" data-offset="0">
-            <a href="#tab1" class="tab-link active button">热门商品</a>
-            <a href="#tab2" class="tab-link button">人气妙集</a>
-        </div>
-        <div class="tabs">
-            <div id="tab1" class="tab active">
-                <div class="list-block media-list" style="margin-top: 0;">
-                    <ul>
-                        <li>
-                            <a href="{:UC('Index/goodsdetail')}" class="item-link item-content">
-                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                                <div class="item-inner">
-                                    <div class="item-text index-item-primary">到新天地看完电影，怎么能不吃一碗热呼呼的砂锅粉的砂锅粉的砂锅粉的砂锅粉。</div>
-                                    <div class="item-subtitle"><span class="index-item-grey">by 邹式砂锅粉店</span></div>
-                                    <div class="item-subtitle">
-                                        <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">$10</span>
-                                        <span class="index-item-grey">浏览：500 | 想买：50 </span></div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item-link item-content">
-                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                                <div class="item-inner">
-                                    <div class="item-text index-item-primary">到新天地看完电影，怎么能不吃一碗热呼呼的砂锅粉的砂锅粉的砂锅粉的砂锅粉。</div>
-                                    <div class="item-subtitle"><span class="index-item-grey">by 邹式砂锅粉店</span></div>
-                                    <div class="item-subtitle">
-                                        <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">$10</span>
-                                        <span class="index-item-grey">浏览：500 | 想买：50 </span></div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item-link item-content">
-                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                                <div class="item-inner">
-                                    <div class="item-text index-item-primary">到新天地看完电影，怎么能不吃一碗热呼呼的砂锅粉的砂锅粉的砂锅粉的砂锅粉。</div>
-                                    <div class="item-subtitle"><span class="index-item-grey">by 邹式砂锅粉店</span></div>
-                                    <div class="item-subtitle">
-                                        <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">$10</span>
-                                        <span class="index-item-grey">浏览：500 | 想买：50 </span></div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item-link item-content">
-                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                                <div class="item-inner">
-                                    <div class="item-text index-item-primary">到新天地看完电影，怎么能不吃一碗热呼呼的砂锅粉的砂锅粉的砂锅粉的砂锅粉。</div>
-                                    <div class="item-subtitle"><span class="index-item-grey">by 邹式砂锅粉店</span></div>
-                                    <div class="item-subtitle">
-                                        <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">$10</span>
-                                        <span class="index-item-grey">浏览：500 | 想买：50 </span></div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item-link item-content">
-                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                                <div class="item-inner">
-                                    <div class="item-text index-item-primary">到新天地看完电影，怎么能不吃一碗热呼呼的砂锅粉的砂锅粉的砂锅粉的砂锅粉。</div>
-                                    <div class="item-subtitle"><span class="index-item-grey">by 邹式砂锅粉店</span></div>
-                                    <div class="item-subtitle">
-                                        <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">$10</span>
-                                        <span class="index-item-grey">浏览：500 | 想买：50 </span></div>
-                                </div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="item-link item-content">
-                                <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="80"></div>
-                                <div class="item-inner">
-                                    <div class="item-text index-item-primary">到新天地看完电影，怎么能不吃一碗热呼呼的砂锅粉的砂锅粉的砂锅粉的砂锅粉。</div>
-                                    <div class="item-subtitle"><span class="index-item-grey">by 邹式砂锅粉店</span></div>
-                                    <div class="item-subtitle">
-                                        <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">$10</span>
-                                        <span class="index-item-grey">浏览：500 | 想买：50 </span></div>
-                                </div>
-                            </a>
-                        </li>
-                    </ul>
+            <div class="swiper-container adbox" data-space-between='10'>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="__PUBLIC__/images/banner.jpg" alt="" style='width: 100%'></div>
+                    <div class="swiper-slide"><img src="__PUBLIC__/images/banner.jpg" alt="" style='width: 100%'></div>
+                    <div class="swiper-slide"><img src="__PUBLIC__/images/banner.jpg" alt="" style='width: 100%'></div>
                 </div>
             </div>
-
-
-            <div id="tab2" class="tab">
-                <div class="card facebook-card list-block">
-                    <a class="item-link" href="{:UC('Index/collection')}">
-                        <div class="card-header no-border">
-                            <div class="facebook-avatar"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="34" height="34"></div>
-                            <div class="facebook-name">美女大集合</div>
-                            <div class="facebook-date">昨天15:30 by <span class="a">夜萧</span> <span class="fr red-text" style="font-size: 0.5rem;">热门度 80</span></div>
-                        </div>
-                        <div class="card-content">
-                            <div class="card-text">
-                                我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题
-                            </div>
-                            <div class="card-pic">
-                                <img src="__PUBLIC__/images/head.jpg">
-                            </div>
-                        </div>
-                    </a>
-
-                    <div class="card-footer no-border">
-                        <a href="#" class="link">赞一个(30)</a>
-                        <a href="#" class="link">想买(30)</a>
+            <div class="buttons-tab fixed-tab" data-offset="0">
+                <a href="#tab1" class="tab-link active button">热门商品</a>
+                <a href="#tab2" class="tab-link button">人气妙集</a>
+            </div>
+            <div class="tabs">
+                <div id="tab1" class="tab active">
+                    <div class="list-block media-list" style="margin-top: 0;">
+                        <ul>
+                            <volist name="goodsList" id="info">
+                                <li>
+                                    <a href="{:UC('Index/goodsdetail',array('id'=>$info['goodsInfo']['id']))}" class="item-link item-content">
+                                        <div class="item-media">
+                                            <div class="item-img" style="background-image: url({$info['goodsfirstimg']})"></div>
+                                        </div>
+                                        <div class="item-inner">
+                                            <div class="item-text index-item-primary">$info['goodsInfo']['name']</div>
+                                            <div class="item-subtitle"><span class="index-item-grey">by $info['shopName']</span></div>
+                                            <div class="item-subtitle">
+                                                <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">￥{$info['goodsInfo']['price']}</span>
+                                                <span class="index-item-grey">浏览：{$info['UseType_Visit']} | 喜欢：{$info['UseType_Like']} </span></div>
+                                        </div>
+                                    </a>
+                                </li>
+                            </volist>
+                        </ul>
                     </div>
                 </div>
 
-                <div class="card facebook-card list-block">
-                    <a class="item-link" href="{:UC('Index/collection')}">
-                        <div class="card-header no-border">
-                            <div class="facebook-avatar"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="34" height="34"></div>
-                            <div class="facebook-name">美女大集合</div>
-                            <div class="facebook-date">by 夜萧 <span class="fr red-text" style="font-size: 0.5rem;">热门度 80%</span></div>
-                        </div>
-                        <div class="card-content">
-                            <div class="card-text">
-                                我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题
-                            </div>
-                            <div class="card-pic">
-                                <img src="__PUBLIC__/images/head.jpg">
-                            </div>
-                        </div>
-                    </a>
 
-                    <div class="card-footer no-border">
-                        <a href="#" class="link">赞一个(30)</a>
-                        <a href="#" class="link">想买(30)</a>
+                <div id="tab2" class="tab">
+                    <volist name="collectList" id="info">
+                        <div class="card facebook-card list-block">
+                            <a class="item-link" href="{:UC('Index/collection',array('id'=>$info['entity_id']))}">
+                                <div class="card-header no-border">
+                                    <div class="facebook-avatar">
+                                        <img src="{$info['collInfo']['userInfo']['headimgurl']}" width="34" height="34">
+                                    </div>
+                                    <div class="facebook-name">{$info['collInfo']['name']}</div>
+                                    <div class="facebook-date">{$info['collInfo']['ctime'] | formatDate}
+                                        <span class="a"> by {$info['collInfo']['userInfo']['name']}</span>
+                                        <span class="fr red-text" style="font-size: 0.5rem;">热门度 {$info['total']}</span>
+                                    </div>
+                                </div>
+                                <div class="card-content">
+                                    <div class="card-text">
+                                        {$info['collInfo']['intro']}
+                                    </div>
+                                    <div class="card-pic">
+                                        <img src="{$info['collInfo']['firstImgUrl']}">
+                                    </div>
+                                </div>
+                            </a>
+
+                            <div class="card-footer no-border">
+                                <a href="#" class="link">喜欢({$info['UseType_Like']})</a>
+                                <a href="#" class="link">收藏({$info['UseType_Collection']})</a>
+                            </div>
+                        </div>
+                    </volist>
+
+                    <!--
+                    <div class="card facebook-card list-block">
+                        <a class="item-link" href="{:UC('Index/collection')}">
+                            <div class="card-header no-border">
+                                <div class="facebook-avatar"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="34" height="34"></div>
+                                <div class="facebook-name">美女大集合</div>
+                                <div class="facebook-date">by 夜萧 <span class="fr red-text" style="font-size: 0.5rem;">热门度 80%</span></div>
+                            </div>
+                            <div class="card-content">
+                                <div class="card-text">
+                                    我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题
+                                </div>
+                                <div class="card-pic">
+                                    <img src="__PUBLIC__/images/head.jpg">
+                                </div>
+                            </div>
+                        </a>
+
+                        <div class="card-footer no-border">
+                            <a href="#" class="link">赞一个(30)</a>
+                            <a href="#" class="link">想买(30)</a>
+                        </div>
                     </div>
+                    -->
+
                 </div>
 
+                <!-- footer start -->
+
+                <!-- footer end -->
+
             </div>
-
-            <!-- footer start -->
-
-            <!-- footer end -->
-
+            <div style="height: 30px;"></div>
         </div>
-        <div style="height: 50px;"></div>
     </div>
+
 </block>
