--- a/Application/Phone/View/template/main.html
+++ b/Application/Phone/View/template/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>我的生活</title>
+    <title>一妙集</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="/favicon.ico">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,42 +12,21 @@
     <link rel="stylesheet" href="__PUBLIC__/SUI-Mobile/dist/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
     <link rel="stylesheet" href="__PUBLIC__/css/weui.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=19">
+    <link rel="stylesheet" href="__PUBLIC__/css/main.css?v=25">
 
     <block name="css"></block>
 
 </head>
 <body>
 <div class="page-group">
-    <div class="page page-current" id="collection-info">
-        <block name="content"></block>
+    <block name="content"></block>
 
-        <nav class="bar bar-tab">
-            <a class="tab-item external active" href="{:UC('Index/index')}">
-                <span class="icon"><i class="iconfont">&#xe602;</i></span>
-                <span class="tab-label">首页</span>
-            </a>
-            <a class="tab-item external" href="{:UC('Index/publishNeed')}">
-                <span class="icon"><i class="iconfont">&#xe604;</i></span>
-                <span class="tab-label">发布</span>
-            </a>
-            <a class="tab-item external" href="{:UC('Index/topbar')}">
-                <span class="icon"><i class="iconfont">&#xe605;</i></span>
-                <span class="tab-label">排行榜</span>
-            </a>
-            <a class="tab-item external" href="{:UC('User/index')}">
-                <span class="icon"><i class="iconfont">&#xe603;</i></span>
-                <span class="tab-label">个人中心</span>
-                <span class="badge">2</span>
-            </a>
-        </nav>
-    </div>
 </div>
 
 <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-<script type='text/javascript' src="__PUBLIC__/js/main.js" charset='utf-8'></script>
+<script type='text/javascript' src="__PUBLIC__/js/main.js?v=7" charset='utf-8'></script>
 <block name="script"></block>
 </body>
 </html>
