--- a/Application/Phone/View/Index/topbar.html
+++ b/Application/Phone/View/Index/topbar.html
@@ -4,65 +4,69 @@
 </block>
 
 <block name="content">
-    <div class="content native-scroll">
-        <div class="list-block media-list inset">
-            <ul>
-                <li>
-                    <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
-                        <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title">最佳商家榜</div>
+    <div class="page page-current" id="IndexPublishNeed">
+        {$tplBar}
+        <div class="content native-scroll">
+            <div class="list-block media-list inset">
+                <ul>
+                    <li>
+                        <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
+                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
+                            <div class="item-inner">
+                                <div class="item-title-row">
+                                    <div class="item-title">最佳商家榜</div>
+                                </div>
+                                <div class="item-subtitle">子标题</div>
                             </div>
-                            <div class="item-subtitle">子标题</div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
-                        <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title">最佳用户榜</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
+                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
+                            <div class="item-inner">
+                                <div class="item-title-row">
+                                    <div class="item-title">最佳用户榜</div>
+                                </div>
+                                <div class="item-subtitle">子标题</div>
                             </div>
-                            <div class="item-subtitle">子标题</div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
-                        <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title">最佳妙集榜</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
+                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
+                            <div class="item-inner">
+                                <div class="item-title-row">
+                                    <div class="item-title">最佳妙集榜</div>
+                                </div>
+                                <div class="item-subtitle">子标题</div>
                             </div>
-                            <div class="item-subtitle">子标题</div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
-                        <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title">附近店铺排行榜</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
+                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
+                            <div class="item-inner">
+                                <div class="item-title-row">
+                                    <div class="item-title">附近店铺排行榜</div>
+                                </div>
+                                <div class="item-subtitle">子标题</div>
                             </div>
-                            <div class="item-subtitle">子标题</div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
-                        <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
-                        <div class="item-inner">
-                            <div class="item-title-row">
-                                <div class="item-title">附近用户排行榜</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{:UC('Index/topbarDetail')}" class="item-link item-content">
+                            <div class="item-media"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="44"></div>
+                            <div class="item-inner">
+                                <div class="item-title-row">
+                                    <div class="item-title">附近用户排行榜</div>
+                                </div>
+                                <div class="item-subtitle">子标题</div>
                             </div>
-                            <div class="item-subtitle">子标题</div>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+
 </block>
