--- a/Application/Phone/View/Index/publishGoodsList.html
+++ b/Application/Phone/View/Index/publishGoodsList.html
@@ -4,6 +4,7 @@
 </block>
 
 <block name="content">
+  <div class="page page-current" id="PublishGoodsList">
     <div class="content native-scroll">
         <div class="mainmenu">
             <a href="javascript:;" onclick="history.back();" class="item-menu">导购咨询</a>
@@ -11,59 +12,70 @@
         </div>
         <div class="list-block cards-list">
             <ul>
-                <li>
-                    <div class="card facebook-card list-block">
-                        <a class="item-link" href="{:UC('Index/collection')}">
-                            <div class="card-header no-border">
-                                <div class="facebook-avatar"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="34" height="34"></div>
-                                <div class="facebook-name">美女大集合</div>
-                                <div class="facebook-date">by 夜萧 <span class="fr red-text" style="font-size: 0.5rem;">妙集</span></div>
-                            </div>
-                            <div class="card-content">
-                                <div class="card-text">
-                                    我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题
-                                </div>
-                                <div class="card-pic">
-                                    <img src="__PUBLIC__/images/head.jpg">
-                                </div>
-                            </div>
-                        </a>
+                <volist name="list" id="info">
+                    <li>
+                        <!-- 妙集 -->
+                        <if condition="$info['collection'] eq 1">
+                            <div class="card facebook-card list-block">
+                                <a class="item-link" href="{:UC('Index/collection',array('id'=>$info['id']))}">
+                                    <div class="card-header no-border">
+                                        <div class="facebook-avatar">
+                                            <img src="{$info['userInfo']['headimgurl']}" width="34" height="34">
+                                        </div>
+                                        <div class="facebook-name">{$info['name']}</div>
+                                        <div class="facebook-date">by {$info['userInfo']['nickname']} <span class="fr red-text" style="font-size: 0.5rem;">妙集</span></div>
+                                    </div>
+                                    <div class="card-content">
+                                        <div class="card-text">
+                                            {$info['intro']}
+                                        </div>
+                                        <div class="card-pic">
+                                            <img src="{$info['faceImgUrl']['url']}">
+                                        </div>
+                                    </div>
+                                </a>
 
-                        <div class="card-footer no-border">
-                            <a href="#" class="link">赞一个(30)</a>
-                            <a href="#" class="link">想买(30)</a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="card facebook-card list-block">
-                        <a class="item-link" href="{:UC('Index/collection')}">
-                            <div class="card-header no-border">
-                                <div class="facebook-avatar"><img src="http://gqianniu.alicdn.com/bao/uploaded/i4//tfscom/i3/TB10LfcHFXXXXXKXpXXXXXXXXXX_!!0-item_pic.jpg_250x250q60.jpg" width="34" height="34"></div>
-                                <div class="facebook-name">美女大集合</div>
-                                <div class="facebook-date">by 夜萧 <span class="fr green-text" style="font-size: 0.5rem;">商品</span></div>
-                            </div>
-                            <div class="card-content">
-                                <div class="card-text">
-                                    我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题我们对页面的基本结构是有要求的，否则可能会出现样式错误或者无法正确加载页面等问题
-                                </div>
-                                <div class="card-pic">
-                                    <img src="__PUBLIC__/images/head.jpg">
+                                <div class="card-footer no-border">
+                                    <a href="#" class="link">喜欢({$info['likeNum']})</a>
+                                    <a href="#" class="link">评论({$info['commentNum']})</a>
                                 </div>
                             </div>
-                        </a>
 
-                        <div class="card-footer no-border">
-                            <a href="#" class="link">赞一个(30)</a>
-                            <a href="#" class="link">想买(30)</a>
-                        </div>
-                    </div>
-                </li>
+                            <else/>
+                            <!-- 商品 -->
+                            <div class="card facebook-card list-block">
+                                <a class="item-link" href="{:UC('Index/goods',array('id'=>$info['id']))}">
+                                    <div class="card-header no-border">
+                                        <div class="facebook-avatar">
+                                            <img src="{$info['userInfo']['headimgurl']}" width="34" height="34">
+                                        </div>
+                                        <div class="facebook-name">{$info['name']}</div>
+                                        <div class="facebook-date">by {$info['userInfo']['nickname']} <span class="fr green-text" style="font-size: 0.5rem;">商品</span></div>
+                                    </div>
+                                    <div class="card-content">
+                                        <div class="card-text">
+                                            {$info['intro']}
+                                        </div>
+                                        <div class="card-pic">
+                                            <img src="{$info['goodsfirstimg']}">
+                                        </div>
+                                    </div>
+                                </a>
+
+                                <div class="card-footer no-border">
+                                    <a href="#" class="link">赞一个(30)</a>
+                                    <a href="#" class="link">想买(30)</a>
+                                </div>
+                            </div>
+                        </if>
+
+                    </li>
+                </volist>
             </ul>
         </div>
 
 
         <div style="height: 50px;"></div>
     </div>
+  </div>
 </block>
