--- a/Application/Phone/View/Shop/goods.html
+++ b/Application/Phone/View/Shop/goods.html
@@ -33,7 +33,7 @@
                                                 <div class="item-title-row">
                                                     <div class="item-title">{$info.name}</div>
                                                 </div>
-                                                <div class="item-subtitle">{$info.intro}</div>
+                                                <div class="text-line3" style="font-size: 0.7rem;">{$info.intro}</div>
                                             </div>
                                         </li>
                                     </ul>
